--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </section>
       <!--Our team section-->
       <section class="team">
-        <div class="container">
+        <div class="container" id="specific-width-team-tablet">
           <h2 class="main-title-team">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-item list">
@@ -583,7 +583,7 @@
     </main>
     <!--Page footer-->
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container footer-container" id="specific-width-footer-tablet">
         <div class="footer-link-container footer-link-container-tablet">
           <a class="footer-link link" href="./index.html"
             >Web<span class="accent-footer">Studio</span></a
@@ -674,7 +674,7 @@
       </div>
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg
