--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
     </div>
 
     <!-- MOBILE MENU -->
-    <div class="mobile-menu">
+    <div class="mobile-menu is-open">
       <button class="mobile-menu-close-btn" type="button">
         <svg
           class="mobile-menu-close-icon"
@@ -827,73 +827,75 @@
           </li>
         </ul>
       </nav>
-      <address class="modal-page-address">
-        <ul class="modal-address-list">
-          <li class="modal-address-list-item list">
-            <a class="modal-address-list-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+      <div class="mobile-menu-contacts">
+        <address class="modal-page-address">
+          <ul class="modal-address-list">
+            <li class="modal-address-list-item list">
+              <a class="modal-address-list-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="modal-address-list-item list">
+              <a
+                class="modal-address-list-link accent-color link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <ul class="modal-mobile-social-media-list list">
+          <li class="modal-mobile-social-media-list-item">
+            <a class="modal-mobile-social-media-list-link" href="">
+              <svg
+                class="social-network-list-icon"
+                width="24"
+                height="24"
+                aria-label="instagram icon"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li class="modal-address-list-item list">
-            <a
-              class="modal-address-list-link accent-color link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+          <li class="modal-mobile-social-media-list-item">
+            <a class="modal-mobile-social-media-list-link" href="">
+              <svg
+                class="social-network-list-icon"
+                width="24"
+                height="24"
+                aria-label="twitter icon"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="modal-mobile-social-media-list-item">
+            <a class="modal-mobile-social-media-list-link" href="">
+              <svg
+                class="social-network-list-icon"
+                width="24"
+                height="24"
+                aria-label="facebook icon"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="modal-mobile-social-media-list-item">
+            <a class="modal-mobile-social-media-list-link" href="">
+              <svg
+                class="social-network-list-icon"
+                width="24"
+                height="24"
+                aria-label="linkedin icon"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
-
-      <ul class="modal-mobile-social-media-list list">
-        <li class="modal-mobile-social-media-list-item">
-          <a class="modal-mobile-social-media-list-link" href="">
-            <svg
-              class="social-network-list-icon"
-              width="24"
-              height="24"
-              aria-label="instagram icon"
-            >
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="modal-mobile-social-media-list-item">
-          <a class="modal-mobile-social-media-list-link" href="">
-            <svg
-              class="social-network-list-icon"
-              width="24"
-              height="24"
-              aria-label="twitter icon"
-            >
-              <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="modal-mobile-social-media-list-item">
-          <a class="modal-mobile-social-media-list-link" href="">
-            <svg
-              class="social-network-list-icon"
-              width="24"
-              height="24"
-              aria-label="facebook icon"
-            >
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="modal-mobile-social-media-list-item">
-          <a class="modal-mobile-social-media-list-link" href="">
-            <svg
-              class="social-network-list-icon"
-              width="24"
-              height="24"
-              aria-label="linkedin icon"
-            >
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      </div>
     </div>
   </body>
 </html>
